# Hmatrix_2D

./: CMakeLists.txt  README.md  test_ker.cpp
HODLR-master/: CMakeLists.txt
HODLR-master/include/: HODLR_Matrix.hpp  HODLR_Node.hpp
HODLR-master/src/: HODLR.cpp  HODLR_Matrix.cpp  HODLR_Node.cpp  HODLR_NonSPD.cpp  HODLR_NonSPD_.cpp
include/: CKERNEL.hpp  GMRES.hpp  HMAT2DNODE.hpp  HMAT2DTREE.hpp  KERNEL_FUNCTIONS.hpp  myHeaders.hpp
sample output/: gmres_out_2_10000_4.txt  h2.txt  hmat_2_10000_4.txt
